snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__kenlm__util__double-conversion__diy-fp.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/kenlm/util/double-conversion/diy-fp.cc",
    ),
    start_line: 1,
    end_line: 57,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "kenlm_double_conversion",
            ),
            start_line: 32,
            end_line: 57,
            kind: Namespace,
            spaces: [
                FuncSpace {
                    name: None,
                    start_line: 34,
                    end_line: 55,
                    kind: Function,
                    spaces: [],
                    metrics: CodeMetrics {
                        nargs: Stats {
                            fn_nargs: 1,
                            closure_nargs: 0,
                            fn_nargs_sum: 1,
                            closure_nargs_sum: 0,
                            fn_nargs_min: 1,
                            closure_nargs_min: 0,
                            fn_nargs_max: 1,
                            closure_nargs_max: 0,
                            total_functions: 1,
                            total_closures: 0,
                        },
                        nexits: Stats {
                            exit: 0,
                            exit_sum: 0,
                            total_space_functions: 1,
                            exit_min: 0,
                            exit_max: 0,
                        },
                        cognitive: Stats {
                            structural: 0,
                            structural_sum: 0,
                            structural_min: 0,
                            structural_max: 0,
                            nesting: 0,
                            total_space_functions: 1,
                            boolean_seq: BoolSequence {
                                boolean_op: None,
                            },
                        },
                        cyclomatic: Stats {
                            cyclomatic_sum: 1.0,
                            cyclomatic: 1.0,
                            n: 1,
                            cyclomatic_max: 1.0,
                            cyclomatic_min: 1.0,
                        },
                        halstead: Stats {
                            u_operators: 13,
                            operators: 74,
                            u_operands: 21,
                            operands: 55,
                        },
                        loc: Stats {
                            sloc: Sloc {
                                start: 33,
                                end: 54,
                                unit: false,
                                sloc_min: 22,
                                sloc_max: 22,
                            },
                            ploc: Ploc {
                                lines: {
                                    52,
                                    46,
                                    43,
                                    40,
                                    54,
                                    51,
                                    45,
                                    42,
                                    39,
                                    33,
                                    53,
                                    50,
                                    47,
                                    44,
                                    41,
                                    38,
                                },
                                ploc_min: 16,
                                ploc_max: 16,
                            },
                            cloc: Cloc {
                                only_comment_lines: 6,
                                code_comment_lines: 0,
                                comment_line_end: Some(
                                    49,
                                ),
                                cloc_min: 6,
                                cloc_max: 6,
                            },
                            lloc: Lloc {
                                logical_lines: 14,
                                lloc_min: 14,
                                lloc_max: 14,
                            },
                            space_count: 1,
                            blank_min: 0,
                            blank_max: 0,
                        },
                        nom: Stats {
                            functions: 1,
                            closures: 0,
                            functions_sum: 1,
                            closures_sum: 0,
                            functions_min: 1,
                            functions_max: 1,
                            closures_min: 0,
                            closures_max: 0,
                            space_count: 1,
                        },
                        mi: Stats {
                            halstead_length: 129.0,
                            halstead_vocabulary: 34.0,
                            halstead_volume: 656.2827065212938,
                            cyclomatic: 1.0,
                            sloc: 22.0,
                            comments_percentage: 0.2727272727272727,
                        },
                        abc: Stats {
                            assignments: 0.0,
                            assignments_sum: 0.0,
                            assignments_min: 0.0,
                            assignments_max: 0.0,
                            branches: 0.0,
                            branches_sum: 0.0,
                            branches_min: 0.0,
                            branches_max: 0.0,
                            conditions: 0.0,
                            conditions_sum: 0.0,
                            conditions_min: 0.0,
                            conditions_max: 0.0,
                            space_count: 1,
                            declaration: [],
                        },
                        wmc: Stats {
                            cyclomatic: 0.0,
                            class_wmc: 0.0,
                            interface_wmc: 0.0,
                            class_wmc_sum: 0.0,
                            interface_wmc_sum: 0.0,
                            space_kind: Unknown,
                        },
                        npm: Stats {
                            class_npm: 0,
                            interface_npm: 0,
                            class_nm: 0,
                            interface_nm: 0,
                            class_npm_sum: 0,
                            interface_npm_sum: 0,
                            class_nm_sum: 0,
                            interface_nm_sum: 0,
                            is_class_space: false,
                        },
                        npa: Stats {
                            class_npa: 0,
                            interface_npa: 0,
                            class_na: 0,
                            interface_na: 0,
                            class_npa_sum: 0,
                            interface_npa_sum: 0,
                            class_na_sum: 0,
                            interface_na_sum: 0,
                            is_class_space: false,
                        },
                    },
                },
            ],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 1,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 1,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 0,
                    total_space_functions: 1,
                    exit_min: 0,
                    exit_max: 0,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 0,
                    structural_min: 0,
                    structural_max: 0,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 2.0,
                    cyclomatic: 1.0,
                    n: 2,
                    cyclomatic_max: 1.0,
                    cyclomatic_min: 1.0,
                },
                halstead: Stats {
                    u_operators: 13,
                    operators: 75,
                    u_operands: 22,
                    operands: 56,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 31,
                        end: 56,
                        unit: false,
                        sloc_min: 22,
                        sloc_max: 22,
                    },
                    ploc: Ploc {
                        lines: {
                            52,
                            46,
                            43,
                            40,
                            31,
                            54,
                            51,
                            45,
                            42,
                            39,
                            33,
                            56,
                            53,
                            50,
                            47,
                            44,
                            41,
                            38,
                        },
                        ploc_min: 16,
                        ploc_max: 16,
                    },
                    cloc: Cloc {
                        only_comment_lines: 6,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 6,
                        cloc_max: 6,
                    },
                    lloc: Lloc {
                        logical_lines: 14,
                        lloc_min: 14,
                        lloc_max: 14,
                    },
                    space_count: 2,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 0,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 0,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 2,
                },
                mi: Stats {
                    halstead_length: 131.0,
                    halstead_vocabulary: 35.0,
                    halstead_volume: 671.9360752197906,
                    cyclomatic: 2.0,
                    sloc: 26.0,
                    comments_percentage: 0.23076923076923078,
                },
                abc: Stats {
                    assignments: 0.0,
                    assignments_sum: 0.0,
                    assignments_min: 0.0,
                    assignments_max: 0.0,
                    branches: 0.0,
                    branches_sum: 0.0,
                    branches_min: 0.0,
                    branches_max: 0.0,
                    conditions: 0.0,
                    conditions_sum: 0.0,
                    conditions_min: 0.0,
                    conditions_max: 0.0,
                    space_count: 2,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.0,
                    class_wmc: 0.0,
                    interface_wmc: 0.0,
                    class_wmc_sum: 0.0,
                    interface_wmc_sum: 0.0,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: false,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: false,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 1,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 1,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 0,
            structural_min: 0,
            structural_max: 0,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 3.0,
            cyclomatic: 1.0,
            n: 3,
            cyclomatic_max: 1.0,
            cyclomatic_min: 1.0,
        },
        halstead: Stats {
            u_operators: 13,
            operators: 75,
            u_operands: 24,
            operands: 58,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 57,
                unit: true,
                sloc_min: 26,
                sloc_max: 26,
            },
            ploc: Ploc {
                lines: {
                    29,
                    52,
                    46,
                    43,
                    40,
                    31,
                    28,
                    54,
                    51,
                    45,
                    42,
                    39,
                    33,
                    56,
                    53,
                    50,
                    47,
                    44,
                    41,
                    38,
                },
                ploc_min: 18,
                ploc_max: 18,
            },
            cloc: Cloc {
                only_comment_lines: 32,
                code_comment_lines: 1,
                comment_line_end: Some(
                    25,
                ),
                cloc_min: 6,
                cloc_max: 6,
            },
            lloc: Lloc {
                logical_lines: 14,
                lloc_min: 14,
                lloc_max: 14,
            },
            space_count: 3,
            blank_min: 2,
            blank_max: 2,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 133.0,
            halstead_vocabulary: 37.0,
            halstead_volume: 692.8572976286504,
            cyclomatic: 3.0,
            sloc: 57.0,
            comments_percentage: 0.5789473684210527,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
